--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
   override:
     - dotnet restore
 
-databases:
+database:
   override:
     - docker run -d -p 1433:1433 -e SA_PASSWORD=adapter@2015 -e ACCEPT_EULA=Y --name mssql microsoft/mssql-server-linux
     - docker inspect mssql
