--- a/src/WebAPIApplication/appsettings.json
+++ b/src/WebAPIApplication/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=WorkshopAspCore_Test;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "DefaultConnection": "Server=127.0.0.1;Database=WorkshopAspCore_Test;User Id=sa;Password=Workshop@123;MultipleActiveResultSets=true"
+},
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
