--- a/src/WebAPIApplication/appsettings.json
+++ b/src/WebAPIApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=WorkshopAspCore_Test;User Id=sa;Password=Workshop@123;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=mssql;Database=WorkshopAspCore_Test;User Id=sa;Password=Workshop@123;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
